@@ -2,8 +2,6 @@
 package net.mcreator.dimensions.world.biome;
 
 import net.minecraft.world.level.levelgen.placement.SurfaceWaterDepthFilter;
-import net.minecraft.world.level.levelgen.placement.RarityFilter;
-import net.minecraft.world.level.levelgen.placement.NoiseThresholdCountPlacement;
 import net.minecraft.world.level.levelgen.placement.InSquarePlacement;
 import net.minecraft.world.level.levelgen.placement.CountPlacement;
 import net.minecraft.world.level.levelgen.placement.BiomeFilter;
@@ -22,7 +20,6 @@ import net.minecraft.world.level.biome.BiomeGenerationSettings;
 import net.minecraft.world.level.biome.Biome;
 import net.minecraft.util.valueproviders.ConstantInt;
 import net.minecraft.data.worldgen.placement.PlacementUtils;
-import net.minecraft.data.worldgen.features.VegetationFeatures;
 import net.minecraft.data.worldgen.features.FeatureUtils;
 import net.minecraft.data.worldgen.BiomeDefaultFeatures;
 
@@ -36,41 +33,27 @@ import java.util.List;
 import com.google.common.collect.ImmutableList;
 
 public class MoukiBiomeBiome {
-	public static final Climate.ParameterPoint PARAMETER_POINT = new Climate.ParameterPoint(Climate.Parameter.span(-0.166666666667f, 0.166666666667f),
-			Climate.Parameter.span(-0.166666666667f, 0.166666666667f), Climate.Parameter.span(0.343333333333f, 0.676666666667f),
-			Climate.Parameter.span(0.633333333333f, 0.966666666667f), Climate.Parameter.point(0),
-			Climate.Parameter.span(-0.160185409432f, 0.173147923902f), 0);
+	public static final List<Climate.ParameterPoint> PARAMETER_POINTS = List.of(
+			new Climate.ParameterPoint(Climate.Parameter.span(-0.2f, 0.2f), Climate.Parameter.span(-0.2f, 0.2f), Climate.Parameter.span(0.31f, 0.71f), Climate.Parameter.span(0.6f, 1f), Climate.Parameter.point(0.0f),
+					Climate.Parameter.span(-0.1935187428f, 0.2064812572f), 0),
+			new Climate.ParameterPoint(Climate.Parameter.span(-0.2f, 0.2f), Climate.Parameter.span(-0.2f, 0.2f), Climate.Parameter.span(0.31f, 0.71f), Climate.Parameter.span(0.6f, 1f), Climate.Parameter.point(1.0f),
+					Climate.Parameter.span(-0.1935187428f, 0.2064812572f), 0));
 
 	public static Biome createBiome() {
-		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(-3355444).waterColor(4159204).waterFogColor(329011)
-				.skyColor(-3355444).foliageColorOverride(10387789).grassColorOverride(-10027162).build();
+		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(-3355444).waterColor(4159204).waterFogColor(329011).skyColor(-3355444).foliageColorOverride(10387789).grassColorOverride(-10027162).build();
 		BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder();
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
 				PlacementUtils.register("dimensions:tree_mouki_biome",
 						FeatureUtils.register("dimensions:tree_mouki_biome", Feature.TREE,
-								new TreeConfiguration.TreeConfigurationBuilder(
-										BlockStateProvider.simple(DimensionsModBlocks.BLUEWOOD_LOG.get().defaultBlockState()),
-										new MegaJungleTrunkPlacer(8, 2, 19),
-										BlockStateProvider.simple(DimensionsModBlocks.BLUEWOOD_LEAVES.get().defaultBlockState()),
-										new MegaJungleFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 2), new TwoLayersFeatureSize(1, 1, 2))
-										.decorators(ImmutableList.of(MoukiBiomeLeaveDecorator.INSTANCE, MoukiBiomeTrunkDecorator.INSTANCE,
-												MoukiBiomeFruitDecorator.INSTANCE))
-										.build()),
-						List.of(CountPlacement.of(3), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
-								PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING),
-								BiomeFilter.biome())));
-		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("dimensions:grass_mouki_biome", VegetationFeatures.PATCH_GRASS,
-						List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 4), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE,
-								BiomeFilter.biome())));
-		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("dimensions:flower_mouki_biome", VegetationFeatures.FLOWER_DEFAULT, List.of(CountPlacement.of(4),
-						RarityFilter.onAverageOnceEvery(32), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())));
+								new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(DimensionsModBlocks.BLUEWOOD_LOG.get().defaultBlockState()), new MegaJungleTrunkPlacer(8, 2, 19),
+										BlockStateProvider.simple(DimensionsModBlocks.BLUEWOOD_LEAVES.get().defaultBlockState()), new MegaJungleFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 2), new TwoLayersFeatureSize(1, 1, 2))
+										.decorators(ImmutableList.of(MoukiBiomeLeaveDecorator.INSTANCE, MoukiBiomeTrunkDecorator.INSTANCE, MoukiBiomeFruitDecorator.INSTANCE)).build()),
+						List.of(CountPlacement.of(3), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0), PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
+		BiomeDefaultFeatures.addForestGrass(biomeGenerationSettings);
 		BiomeDefaultFeatures.addDefaultCarversAndLakes(biomeGenerationSettings);
 		BiomeDefaultFeatures.addDefaultOres(biomeGenerationSettings);
 		BiomeDefaultFeatures.addSurfaceFreezing(biomeGenerationSettings);
 		MobSpawnSettings.Builder mobSpawnInfo = new MobSpawnSettings.Builder();
-		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.RAIN).temperature(0.5f).downfall(0.5f).specialEffects(effects)
-				.mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
+		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.RAIN).temperature(0.5f).downfall(0.5f).specialEffects(effects).mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
 	}
 }
